--- a/crates/seal-sdk/Cargo.toml
+++ b/crates/seal-sdk/Cargo.toml
@@ -20,8 +20,16 @@ sui_sdk = { workspace = true }
 sui_types = { workspace = true }
 shared_crypto = { workspace = true }
 sui-sdk-types = { workspace = true }
-reqwest = { version = "0.11", features = ["json", "native-tls"] }
+reqwest = { version = "0.11", optional = true }
+http = { version = "0.2.12", optional = true }
 hex = { workspace = true }
 base64 = "0.22.1"
 thiserror = "1.0.69"
 rand = { workspace = true }
+moka = { version = "0.12.11", features = ["future"], optional = true }
+
+[features]
+default = ["client", "native-tls"]
+native-tls = ["reqwest/native-tls"]
+client = ["reqwest", "http"]
+moka-client = ["moka"]
